--- a/src/styles/mainpage/sponsors.module.css
+++ b/src/styles/mainpage/sponsors.module.css
@@ -96,6 +96,11 @@
 }
 
 @media (max-width: 600px) {
+  .sponsorsSection {
+    margin-top: 8rem;
+    margin-bottom: 8rem;
+  }
+
   .sponsorsType {
     font-size: 1em;
   }
